--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
     <script>
         // [핵심 요구 사항]
-        const SERVER_URL = ""; 
+        const SERVER_URL = "https://4ad3dc3a-efa2-428a-836c-6f95d0988993-00-ciyf4v0zmv8w.sisko.replit.dev"; 
 
         // Global State
         let currentRecommendations = [];
@@ -645,3 +645,4 @@
     </script>
 </body>
 </html>
+
