--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
     <script>
         // [핵심 요구 사항]
-        const SERVER_URL = "https://4ad3dc3a-efa2-428a-836c-6f95d0988993-00-ciyf4v0zmv8w.sisko.replit.dev"; 
+        const SERVER_URL = "https://ai-movie--bween78.replit.app"; 
 
         // Global State
         let currentRecommendations = [];
@@ -669,6 +669,7 @@
     </script>
 </body>
 </html>
+
 
 
 
